<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_activity_login_container"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/dp_10"
    tools:context=".login.LoginActivity">

    <ImageView
        android:id="@+id/iv_activity_login_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/activity_login_label"
        android:minHeight="@dimen/dp_100"
        android:src="@drawable/ic_account" />

    <EditText
        android:id="@+id/et_activity_login_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:hint="@string/activity_login_user_hint"
        android:imeOptions="actionNext"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_activity_login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:layout_marginBottom="@dimen/dp_10"
        android:hint="@string/activity_login_password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/bt_activity_login_forgot"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/activity_login_forgot_password_button"
            android:focusable="true"
            android:onClick="forgotPassword"
            android:text="@string/activity_login_forgot_password_button" />

        <Button
            android:id="@+id/bt_activity_login_sign_in"
            android:layout_width="@dimen/dp_0"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:clickable="true"
            android:contentDescription="@string/activity_login_sign_in_button"
            android:focusable="true"
            android:onClick="signIn"
            android:text="@string/activity_login_sign_in_button" />

    </LinearLayout>

</LinearLayout>