<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:id="@+id/iv_widget_image"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="1"
        android:contentDescription="@string/activity_login_label"
        android:minHeight="@dimen/dp_100"
        android:src="@drawable/ic_account" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="3"
        android:orientation="vertical">

        <TextView
            android:id="@+id/iv_widget_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/widget_title"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_18" />

        <TextView
            android:id="@+id/iv_widget_subtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/widget_subtitle"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/sp_18" />

    </LinearLayout>

</LinearLayout>